Fixes test on iphone 6 (visibility)
removes opacity for better visibility

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -283,7 +283,7 @@ footer {
 
   p {
       font-size: 13px;
-      opacity: .7;
+      opacity: 1;
   }
 
   nav {
